--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
 {
-  "author": {
-    "name": "Paineto"
-  }
+  "author": "Paineto  <Boniphacebpm@gmail.com> (http://paiprotech.000webhostapp.com/)"
 }
