--- a/package.json
+++ b/package.json
@@ -1,3 +1,15 @@
 {
-  "author": "Paineto  <Boniphacebpm@gmail.com> (http://paiprotech.000webhostapp.com/)"
+  "name": "your-package-name",
+  "version": "1.0.0",
+  "description": "Your package description",
+  "author": {
+    "name": "Your Name",
+    "email": "your.email@example.com",
+    "url": "https://yourwebsite.com"
+  },
+  "license": "MIT",
+  "dependencies": {
+  },
+  "devDependencies": {
+  }
 }
